// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change comment editing time 1`] = `
<div
  className="MainLayout-root"
  data-testid="configure-container"
>
  <form
    autoComplete="off"
    id="configure-form"
    onSubmit={[Function]}
  >
    <div
      className="Flex-root Layout-root Flex-flex"
    >
      <div
        className="SideBar-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
        >
          <nav
            className="Navigation-root"
          >
            <ul
              className="Navigation-ul"
            >
              <li>
                <a
                  className="Link-link Link-linkActive"
                  href="/admin/configure/general"
                  onClick={[Function]}
                >
                  General
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/organization"
                  onClick={[Function]}
                >
                  Organization
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/moderation"
                  onClick={[Function]}
                >
                  Moderation
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/wordList"
                  onClick={[Function]}
                >
                  Banned and Suspect Words
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/auth"
                  onClick={[Function]}
                >
                  Authentication
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/advanced"
                  onClick={[Function]}
                >
                  Advanced
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
        >
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorSuccess Button-variantFilled"
            data-testid="configure-sideBar-saveChanges"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </div>
      <div
        className="Main-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
          data-testid="configure-generalContainer"
        >
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Community Guidelines Summary
            </legend>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Show Community Guidelines Summary
              </legend>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="communityGuidelinesEnable-true"
                    name="communityGuidelinesEnable"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="communityGuidelinesEnable-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="communityGuidelinesEnable-fase"
                    name="communityGuidelinesEnable"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="communityGuidelinesEnable-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </fieldset>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-guidelines-content"
              >
                Community Guidelines Summary
              </label>
              <p
                className="Typography-root Typography-detail Typography-colorTextPrimary"
              >
                Write a summary of your community guidelines that will appear
at the top of each comment stream sitewide. Your summary can be
formatted using Markdown Syntax. More information on how to use
Markdown can be found 
                <a
                  className="ExternalLink-root"
                  href="#"
                  target="_blank"
                >
                  here
                </a>
                .
              </p>
            </div>
            <div
              className="MarkdownEditor-wrapper"
            >
              <textarea
                id="configure-general-guidelines-content"
                name="communityGuidelines"
                onChange={[Function]}
                value=""
              />
            </div>
          </fieldset>
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Comment Length
            </legend>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set a limit on the length of comments sitewide
            </p>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Limit Comment Length
              </label>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="charCount.enabled-true"
                    name="charCount.enabled"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="charCount.enabled-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="charCount.enabled-fase"
                    name="charCount.enabled"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="charCount.enabled-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </div>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentLength-min"
              >
                Minimum Comment Length
              </label>
              <div
                className="TextField-root CommentLengthConfig-commentLengthTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentLength-min"
                  name="charCount.min"
                  onChange={[Function]}
                  placeholder="E.g. 2"
                  spellCheck={false}
                  type="text"
                  value={3}
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Characters
                </p>
              </div>
            </div>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentLength-max"
              >
                Maximum Comment Length
              </label>
              <div
                className="TextField-root CommentLengthConfig-commentLengthTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentLength-max"
                  name="charCount.max"
                  onChange={[Function]}
                  placeholder="E.g. 1000"
                  spellCheck={false}
                  type="text"
                  value={1000}
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Characters
                </p>
              </div>
            </div>
          </fieldset>
          <div
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <h1
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Comment Editing
            </h1>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set a limit on how long commenters have to edit their comments sitewide.
Edited comments are marked as (Edited) on the comment stream and the
moderation panel.
            </p>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentEditing-timeframe"
              >
                Comment Edit Timeframe
              </label>
              <div
                className="TextField-root CommentEditingConfig-commentEditingTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentEditing-timeframe"
                  name="editCommentWindowLength"
                  onChange={[Function]}
                  placeholder="E.g. 30"
                  spellCheck={false}
                  type="text"
                  value="invalid"
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Seconds
                </p>
              </div>
              <div
                className="Message-root Message-colorError"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root MessageIcon-root Icon-sm"
                >
                  warning
                </span>
                <span>
                  Please enter a valid whole number &gt;= 0
                </span>
              </div>
            </div>
          </div>
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Closing Comment Streams
            </legend>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set comment streams to close after a defined period of time after a story’s publication
            </p>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Close Comments Automatically
              </legend>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="autoCloseStream-true"
                    name="autoCloseStream"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="autoCloseStream-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="autoCloseStream-fase"
                    name="autoCloseStream"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="autoCloseStream-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </fieldset>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Close Comments After
              </legend>
              <div
                className="Flex-root Flex-flex Flex-itemGutter"
              >
                <div
                  className="TextField-root DurationField-value"
                >
                  <input
                    aria-label="value"
                    autoCapitalize="off"
                    autoComplete="off"
                    autoCorrect="off"
                    className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                    disabled={false}
                    name="closedTimeout-value"
                    onChange={[Function]}
                    placeholder=""
                    spellCheck={false}
                    type="text"
                    value="1"
                  />
                </div>
                <span
                  className="SelectField-root"
                >
                  <select
                    aria-label="unit"
                    className="SelectField-select DurationField-unit"
                    disabled={false}
                    name="closedTimeout-unit"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="604800"
                  >
                    <option
                      value="3600"
                    >
                      Hour
                    </option>
                    <option
                      value="86400"
                    >
                      Day
                    </option>
                    <option
                      value="604800"
                    >
                      Week
                    </option>
                  </select>
                  <span
                    aria-hidden={true}
                    className="SelectField-iconWrapper"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      expand_more
                    </span>
                  </span>
                </span>
              </div>
            </fieldset>
          </fieldset>
          <div
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <label
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
              htmlFor="configure-general-closedStreamMessage-content"
            >
              Closed Stream Message
            </label>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Write a message to appear after a story is closed for commenting.
            </p>
            <div
              className="MarkdownEditor-wrapper"
            >
              <textarea
                id="configure-general-closedStreamMessage-content"
                name="closedMessage"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders configure general 1`] = `
<div
  className="MainLayout-root"
  data-testid="configure-container"
>
  <form
    autoComplete="off"
    id="configure-form"
    onSubmit={[Function]}
  >
    <div
      className="Flex-root Layout-root Flex-flex"
    >
      <div
        className="SideBar-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
        >
          <nav
            className="Navigation-root"
          >
            <ul
              className="Navigation-ul"
            >
              <li>
                <a
                  className="Link-link Link-linkActive"
                  href="/admin/configure/general"
                  onClick={[Function]}
                >
                  General
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/organization"
                  onClick={[Function]}
                >
                  Organization
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/moderation"
                  onClick={[Function]}
                >
                  Moderation
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/wordList"
                  onClick={[Function]}
                >
                  Banned and Suspect Words
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/auth"
                  onClick={[Function]}
                >
                  Authentication
                </a>
              </li>
              <li>
                <a
                  className="Link-link"
                  href="/admin/configure/advanced"
                  onClick={[Function]}
                >
                  Advanced
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
        >
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorSuccess Button-variantFilled Button-disabled"
            data-testid="configure-sideBar-saveChanges"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </div>
      <div
        className="Main-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-double"
          data-testid="configure-generalContainer"
        >
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Community Guidelines Summary
            </legend>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Show Community Guidelines Summary
              </legend>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="communityGuidelinesEnable-true"
                    name="communityGuidelinesEnable"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="communityGuidelinesEnable-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="communityGuidelinesEnable-fase"
                    name="communityGuidelinesEnable"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="communityGuidelinesEnable-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </fieldset>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-guidelines-content"
              >
                Community Guidelines Summary
              </label>
              <p
                className="Typography-root Typography-detail Typography-colorTextPrimary"
              >
                Write a summary of your community guidelines that will appear
at the top of each comment stream sitewide. Your summary can be
formatted using Markdown Syntax. More information on how to use
Markdown can be found 
                <a
                  className="ExternalLink-root"
                  href="#"
                  target="_blank"
                >
                  here
                </a>
                .
              </p>
            </div>
            <div
              className="MarkdownEditor-wrapper"
            >
              <textarea
                id="configure-general-guidelines-content"
                name="communityGuidelines"
                onChange={[Function]}
                value=""
              />
            </div>
          </fieldset>
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Comment Length
            </legend>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set a limit on the length of comments sitewide
            </p>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Limit Comment Length
              </label>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="charCount.enabled-true"
                    name="charCount.enabled"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="charCount.enabled-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="charCount.enabled-fase"
                    name="charCount.enabled"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="charCount.enabled-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </div>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentLength-min"
              >
                Minimum Comment Length
              </label>
              <div
                className="TextField-root CommentLengthConfig-commentLengthTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentLength-min"
                  name="charCount.min"
                  onChange={[Function]}
                  placeholder="E.g. 2"
                  spellCheck={false}
                  type="text"
                  value={3}
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Characters
                </p>
              </div>
            </div>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentLength-max"
              >
                Maximum Comment Length
              </label>
              <div
                className="TextField-root CommentLengthConfig-commentLengthTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentLength-max"
                  name="charCount.max"
                  onChange={[Function]}
                  placeholder="E.g. 1000"
                  spellCheck={false}
                  type="text"
                  value={1000}
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Characters
                </p>
              </div>
            </div>
          </fieldset>
          <div
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <h1
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Comment Editing
            </h1>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set a limit on how long commenters have to edit their comments sitewide.
Edited comments are marked as (Edited) on the comment stream and the
moderation panel.
            </p>
            <div
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <label
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
                htmlFor="configure-general-commentEditing-timeframe"
              >
                Comment Edit Timeframe
              </label>
              <div
                className="TextField-root CommentEditingConfig-commentEditingTextInput"
              >
                <input
                  autoCapitalize="off"
                  autoComplete="off"
                  autoCorrect="off"
                  className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                  disabled={false}
                  id="configure-general-commentEditing-timeframe"
                  name="editCommentWindowLength"
                  onChange={[Function]}
                  placeholder="E.g. 30"
                  spellCheck={false}
                  type="text"
                  value={30000}
                />
                <p
                  className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Seconds
                </p>
              </div>
            </div>
          </div>
          <fieldset
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <legend
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
            >
              Closing Comment Streams
            </legend>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Set comment streams to close after a defined period of time after a story’s publication
            </p>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Close Comments Automatically
              </legend>
              <div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    disabled={false}
                    id="autoCloseStream-true"
                    name="autoCloseStream"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={true}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="autoCloseStream-true"
                  >
                    On
                  </label>
                </div>
                <div
                  className="Flex-root RadioButton-root Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    disabled={false}
                    id="autoCloseStream-fase"
                    name="autoCloseStream"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value={false}
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="autoCloseStream-fase"
                  >
                    Off
                  </label>
                </div>
              </div>
            </fieldset>
            <fieldset
              className="HorizontalGutter-root FormField-root HorizontalGutter-half"
            >
              <legend
                className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
              >
                Close Comments After
              </legend>
              <div
                className="Flex-root Flex-flex Flex-itemGutter"
              >
                <div
                  className="TextField-root DurationField-value"
                >
                  <input
                    aria-label="value"
                    autoCapitalize="off"
                    autoComplete="off"
                    autoCorrect="off"
                    className="TextField-input TextField-colorRegular TextField-textAlignCenter"
                    disabled={false}
                    name="closedTimeout-value"
                    onChange={[Function]}
                    placeholder=""
                    spellCheck={false}
                    type="text"
                    value="1"
                  />
                </div>
                <span
                  className="SelectField-root"
                >
                  <select
                    aria-label="unit"
                    className="SelectField-select DurationField-unit"
                    disabled={false}
                    name="closedTimeout-unit"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="604800"
                  >
                    <option
                      value="3600"
                    >
                      Hour
                    </option>
                    <option
                      value="86400"
                    >
                      Day
                    </option>
                    <option
                      value="604800"
                    >
                      Week
                    </option>
                  </select>
                  <span
                    aria-hidden={true}
                    className="SelectField-iconWrapper"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      expand_more
                    </span>
                  </span>
                </span>
              </div>
            </fieldset>
          </fieldset>
          <div
            className="HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <label
              className="Typography-root Typography-heading1 Typography-colorTextPrimary Header-root"
              htmlFor="configure-general-closedStreamMessage-content"
            >
              Closed Stream Message
            </label>
            <p
              className="Typography-root Typography-detail Typography-colorTextPrimary"
            >
              Write a message to appear after a story is closed for commenting.
            </p>
            <div
              className="MarkdownEditor-wrapper"
            >
              <textarea
                id="configure-general-closedStreamMessage-content"
                name="closedMessage"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
